# rekk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml
design-reference/: rekk-cassette.html  rekk-mini.html  rekk.html
design-reference/scraps/: sketch-2026-05-20T11-19-32-4lzosn.napkin
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  system_audio.rs  whisper.rs
