[package]
name = "rekk"
version = "0.1.0"
description = "macOS audio recorder with mic + system audio capture, AEC and local Whisper transcription"
authors = ["danibram"]
edition = "2021"
license = "MIT"
repository = "https://github.com/danibram/rekk"
homepage = "https://github.com/danibram/rekk"
readme = "../README.md"

[lib]
name = "rekk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
