[package]
name = "rekk"
version = "0.1.0"
description = "macOS audio recorder with mic + system audio capture, AEC and local Whisper transcription"
authors = ["danibram"]
edition = "2021"
license = "MIT"
repository = "https://github.com/danibram/rekk"
homepage = "https://github.com/danibram/rekk"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rekk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
block2 = "0.6"
cpal = "0.17"
dirs = "6"
hound = "3.5"
objc2 = "0.6"
objc2-av-foundation = { version = "0.3.2", default-features = false, features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
once_cell = "1.21"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "6", features = ["macos_13_0"] }
webrtc-audio-processing = { version = "2", features = ["bundled"] }
